# Zao

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: PressureDiagram.c
app/src/main/res/drawable/: rocket_bg.xml
app/src/main/res/layout/: activity_agentview_view.xml  activity_alert_dialog_0306.xml  activity_bg_view.xml  activity_close_pattern_psw.xml  activity_coupon.xml  activity_eventbus_order_view.xml  activity_eventbus_other.xml  activity_eventbus_second.xml  activity_eventbus_view.xml  activity_gesture_edit.xml  activity_gesture_verify.xml  activity_iciba_view.xml  activity_javamail_setup.xml  activity_javamail_view.xml  activity_main_gesturelock.xml  activity_mynotification_view.xml  activity_okhttp_0306.xml  activity_paintboard_0108.xml  activity_picgallery_0306.xml  activity_popupwindow_view.xml  activity_pressurediagram_0130.xml  activity_record_trans_view.xml  activity_recycleview_0306.xml  activity_rxjava_view.xml  activity_scan_code.xml  activity_screen_record_view.xml  activity_sendbroadcast_0306.xml  activity_setting_pattern_psw.xml  activity_splash.xml  activity_toggleview_view.xml  activity_verify_finger.xml  activity_verify_view.xml  activity_version_update_view.xml  activity_viewanim_0124.xml  activity_viewpager_view.xml  adapter_levellistview_0306.xml  bar_toolbar.xml  content_admin.xml  fragment_admin.xml  fragment_coupon_custom.xml  (+16 more)
app/src/main/res/menu/: menu_anim_0124.xml  menu_screen_record.xml
app/src/main/res/values/: attr.xml  colors.xml  dimens.xml  strings.xml  (+1 more)
(+170 files in other folders)
